<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fitsSystemWindows="true"
    tools:context=".ui.detail.DetailFilmActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleTextAppearance="@style/TransparentText"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:layout_scrollInterpolator="@android:anim/accelerate_decelerate_interpolator">

            <ImageView
                android:id="@+id/iv_backdrop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/backdrop"
                android:scaleType="fitXY"
                app:layout_collapseMode="parallax"
                tools:src="@drawable/backdrop_gotham" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light">

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            android:paddingTop="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="wrap_content"
                android:layout_height="190dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:adjustViewBounds="true"
                android:contentDescription="@string/poster"
                android:elevation="6dp"
                android:scaleType="fitXY"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1"
                tools:src="@drawable/poster_gotham" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:textColor="@color/colorTextPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_poster"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Title" />

            <TextView
                android:id="@+id/release"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/release"
                android:textColor="@color/colorText"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/tv_runtime" />

            <TextView
                android:id="@+id/tv_release"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:textColor="@color/colorTextPrimary"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/release"
                app:layout_constraintStart_toStartOf="@id/release"
                app:layout_constraintTop_toBottomOf="@id/release" />

            <TextView
                android:id="@+id/genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/genre"
                android:textColor="@color/colorText"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextPrimary"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/genre"
                tools:text="Genre" />

            <TextView
                android:id="@+id/runtime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/runtime"
                android:textColor="@color/colorText"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/tv_genre" />

            <TextView
                android:id="@+id/tv_runtime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextPrimary"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="@id/tv_title"
                app:layout_constraintTop_toBottomOf="@id/runtime"
                tools:text="Runtime" />

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg"
                android:backgroundTint="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/iv_poster" />

            <View
                android:id="@+id/view_star"
                android:layout_width="200dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg"
                android:elevation="4dp"
                android:gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingBottom="1dp"
                android:text="@string/rating"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/iv_star1"
                app:layout_constraintStart_toStartOf="@id/view_star"
                app:layout_constraintTop_toBottomOf="@id/view_star" />

            <ImageView
                android:id="@+id/iv_star1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="0dp"
                android:contentDescription="@string/star1"
                android:src="@drawable/ic_star_border_24dp"
                android:tint="#FFD700"
                app:layout_constraintBottom_toBottomOf="@id/tv_rating"
                app:layout_constraintEnd_toStartOf="@id/iv_star2"
                app:layout_constraintStart_toEndOf="@id/tv_rating"
                app:layout_constraintTop_toTopOf="@id/tv_rating" />

            <ImageView
                android:id="@+id/iv_star2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:contentDescription="@string/star2"
                android:src="@drawable/ic_star_border_24dp"
                android:tint="#FFD700"
                app:layout_constraintBottom_toBottomOf="@id/iv_star1"
                app:layout_constraintEnd_toStartOf="@id/iv_star3"
                app:layout_constraintStart_toEndOf="@id/iv_star1"
                app:layout_constraintTop_toTopOf="@id/iv_star1" />

            <ImageView
                android:id="@+id/iv_star3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:contentDescription="@string/star3"
                android:src="@drawable/ic_star_border_24dp"
                android:tint="#FFD700"
                app:layout_constraintBottom_toBottomOf="@id/iv_star2"
                app:layout_constraintEnd_toStartOf="@id/iv_star4"
                app:layout_constraintStart_toEndOf="@id/iv_star2"
                app:layout_constraintTop_toTopOf="@id/iv_star2" />

            <ImageView
                android:id="@+id/iv_star4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:contentDescription="@string/star4"
                android:src="@drawable/ic_star_border_24dp"
                android:tint="#FFD700"
                app:layout_constraintBottom_toBottomOf="@id/iv_star3"
                app:layout_constraintEnd_toStartOf="@id/iv_star5"
                app:layout_constraintStart_toEndOf="@id/iv_star3"
                app:layout_constraintTop_toTopOf="@id/iv_star3" />

            <ImageView
                android:id="@+id/iv_star5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/star5"
                android:src="@drawable/ic_star_border_24dp"
                android:tint="#FFD700"
                app:layout_constraintBottom_toBottomOf="@id/iv_star4"
                app:layout_constraintEnd_toEndOf="@id/view_star"
                app:layout_constraintStart_toEndOf="@id/iv_star4"
                app:layout_constraintTop_toTopOf="@id/iv_star4" />

            <View
                android:id="@+id/line_bot"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg"
                android:backgroundTint="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/tv_rating" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/overview"
                android:textColor="@color/colorText"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line_bot" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:lineSpacingMultiplier="1"
                android:textColor="@color/colorTextPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/overview"
                app:layout_constraintStart_toStartOf="@id/overview"
                app:layout_constraintTop_toBottomOf="@id/overview"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@tools:sample/lorem/random" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>